skeleton html done

--- a/index.html
+++ b/index.html
@@ -4,9 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Toboolist</title>
 </head>
 <body>
-    <!--Pronti, partenza, via!-->  
+    <!--Pronti, partenza, via!-->
+    <!--Header-->
+    <header>
+        <div>
+            <img src="img/logo.png" alt="Logo To Do List">
+            <h1>Toboolist</h1>
+        </div>
+    </header>
+    <!--Main-->
+    <main>
+        <div>
+        <button>Add Task</button>
+        <button>Add Section</button>
+        </div>
+        <div>
+            <section>
+                <h2>&#9660; New Task</h2>
+                <div>
+                    <span>&check;</span>
+                    <span>Quarterly Newsletter</span>
+                    <span>Editorial</span>
+                </div>
+            </section>
+            <section>
+                <h2>&#9660; Today</h2>
+                <div>
+                    <span>&check;</span>
+                    <span>Recruiting blog post</span>
+                    <span>Editorial</span>
+                </div>
+                <div>
+                    <span>&check;</span>
+                    <span>Mobile app launch</span>
+                    <span>Q1 Goals</span>
+                </div>
+                <div>
+                    <span>&cross;</span>
+                    <span>Interview John H.</span>
+                    <span>Recruiting</span>
+                </div>
+                <div>
+                    <span>&check;</span>
+                    <span>Summmit update to mobile storefronts</span>
+                    <span>Mobile</span>
+                </div>
+            </section>
+            <section>
+                <h2>&#9660; Upcoming</h2>
+                <div>
+                    <span>&cross;</span>
+                    <span>Schedule meeting with Alex</span>
+                </div>
+                <div>
+                    <span>&check;</span>
+                    <span>Homepage refresh</span>
+                    <span>Website</span>
+                </div>
+                <div>
+                    <span>&check;</span>
+                    <span>Onboard new Sales team members</span>
+                    <span>Sales</span>
+                </div>
+                <div>
+                    <span>&check;</span>
+                    <span>Review editorial calendar</span>
+                    <span>Editorial</span>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
