bg-colors and text-colors done

--- a/index.html
+++ b/index.html
@@ -20,64 +20,67 @@
     </header>
     <!--Main-->
     <main>
-        <div>
-        <button>Add Task</button>
-        <button>Add Section</button>
-        </div>
-        <div>
-            <section>
-                <h2>&#9660; New Task</h2>
-                <div>
-                    <span>&check;</span>
-                    <span>Quarterly Newsletter</span>
-                    <span>Editorial</span>
-                </div>
-            </section>
-            <section>
-                <h2>&#9660; Today</h2>
-                <div>
-                    <span>&check;</span>
-                    <span>Recruiting blog post</span>
-                    <span>Editorial</span>
-                </div>
-                <div>
-                    <span>&check;</span>
-                    <span>Mobile app launch</span>
-                    <span>Q1 Goals</span>
-                </div>
-                <div>
-                    <span>&cross;</span>
-                    <span>Interview John H.</span>
-                    <span>Recruiting</span>
-                </div>
-                <div>
-                    <span>&check;</span>
-                    <span>Summmit update to mobile storefronts</span>
-                    <span>Mobile</span>
-                </div>
-            </section>
-            <section>
-                <h2>&#9660; Upcoming</h2>
-                <div>
-                    <span>&cross;</span>
-                    <span>Schedule meeting with Alex</span>
-                </div>
-                <div>
-                    <span>&check;</span>
-                    <span>Homepage refresh</span>
-                    <span>Website</span>
-                </div>
-                <div>
-                    <span>&check;</span>
-                    <span>Onboard new Sales team members</span>
-                    <span>Sales</span>
-                </div>
-                <div>
-                    <span>&check;</span>
-                    <span>Review editorial calendar</span>
-                    <span>Editorial</span>
-                </div>
-            </section>
+        <div class="container">
+            <div>
+                <button>Add Task</button>
+                <button>Add Section</button>
+                <hr>
+            </div>
+            <div>
+                <section>
+                    <h2>&#9660; New Task</h2>
+                    <div>
+                        <span>&check;</span>
+                        <span>Quarterly Newsletter</span>
+                        <span>Editorial</span>
+                    </div>
+                </section>
+                <section>
+                    <h2>&#9660; Today</h2>
+                    <div>
+                        <span>&check;</span>
+                        <span>Recruiting blog post</span>
+                        <span>Editorial</span>
+                    </div>
+                    <div>
+                        <span>&check;</span>
+                        <span>Mobile app launch</span>
+                        <span>Q1 Goals</span>
+                    </div>
+                    <div>
+                        <span>&cross;</span>
+                        <span>Interview John H.</span>
+                        <span>Recruiting</span>
+                    </div>
+                    <div>
+                        <span>&check;</span>
+                        <span>Summmit update to mobile storefronts</span>
+                        <span>Mobile</span>
+                    </div>
+                </section>
+                <section>
+                    <h2>&#9660; Upcoming</h2>
+                    <div>
+                        <span>&cross;</span>
+                        <span>Schedule meeting with Alex</span>
+                    </div>
+                    <div>
+                        <span>&check;</span>
+                        <span>Homepage refresh</span>
+                        <span>Website</span>
+                    </div>
+                    <div>
+                        <span>&check;</span>
+                        <span>Onboard new Sales team members</span>
+                        <span>Sales</span>
+                    </div>
+                    <div>
+                        <span>&check;</span>
+                        <span>Review editorial calendar</span>
+                        <span>Editorial</span>
+                    </div>
+                </section>
+            </div>
         </div>
     </main>
 </body>
