general, header, main, bg-colors, text color, radius and border done.

--- a/index.html
+++ b/index.html
@@ -22,62 +22,61 @@
     <main>
         <div class="container">
             <div>
-                <button>Add Task</button>
-                <button>Add Section</button>
-                <hr>
+                <button class="bg-blue text-white little-radius">Add Task</button>
+                <button class="little-radius">Add Section</button>
             </div>
             <div>
                 <section>
-                    <h2>&#9660; New Task</h2>
+                    <h2><span>&#9660;</span> New Task</h2>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Quarterly Newsletter</span>
-                        <span>Editorial</span>
+                        <small class="bg-blue text-white half-radius">Editorial</small>
                     </div>
                 </section>
                 <section>
-                    <h2>&#9660; Today</h2>
+                    <h2><span>&#9660;</span> Today</h2>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Recruiting blog post</span>
-                        <span>Editorial</span>
+                        <small class="bg-blue text-white half-radius">Editorial</small>
                     </div>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Mobile app launch</span>
-                        <span>Q1 Goals</span>
+                        <small class="bg-violet text-white half-radius">Q1 Goals</small>
                     </div>
                     <div>
-                        <span>&cross;</span>
+                        <span class="text-red box-cross full-radius">&cross;</span>
                         <span>Interview John H.</span>
-                        <span>Recruiting</span>
+                        <small class="bg-green text-white half-radius">Recruiting</small>
                     </div>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Summmit update to mobile storefronts</span>
-                        <span>Mobile</span>
+                        <small class="bg-orange text-white half-radius">Mobile</small>
                     </div>
                 </section>
                 <section>
-                    <h2>&#9660; Upcoming</h2>
+                    <h2><span>&#9660;</span> Upcoming</h2>
                     <div>
-                        <span>&cross;</span>
+                        <span class="text-red box-cross full-radius">&cross;</span>
                         <span>Schedule meeting with Alex</span>
                     </div>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Homepage refresh</span>
-                        <span>Website</span>
+                        <small class="bg-pink text-white half-radius">Website</small>
                     </div>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Onboard new Sales team members</span>
-                        <span>Sales</span>
+                        <small class="bg-green-light text-white half-radius">Sales</small>
                     </div>
                     <div>
-                        <span>&check;</span>
+                        <span class="text-green box-check full-radius">&check;</span>
                         <span>Review editorial calendar</span>
-                        <span>Editorial</span>
+                        <small class="bg-blue text-white half-radius">Editorial</small>
                     </div>
                 </section>
             </div>
