--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Toboolist</title>
 </head>
+
 <body>
     <!--Pronti, partenza, via!-->
     <!--Header-->
@@ -20,67 +22,66 @@
     </header>
     <!--Main-->
     <main>
-        <div class="container">
-            <div>
-                <button class="bg-blue text-white little-radius">Add Task</button>
-                <button class="little-radius">Add Section</button>
-            </div>
-            <div>
-                <section>
-                    <h2><span>&#9660;</span> New Task</h2>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Quarterly Newsletter</span>
-                        <small class="bg-blue text-white half-radius">Editorial</small>
-                    </div>
-                </section>
-                <section>
-                    <h2><span>&#9660;</span> Today</h2>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Recruiting blog post</span>
-                        <small class="bg-blue text-white half-radius">Editorial</small>
-                    </div>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Mobile app launch</span>
-                        <small class="bg-violet text-white half-radius">Q1 Goals</small>
-                    </div>
-                    <div>
-                        <span class="text-red box-cross full-radius">&cross;</span>
-                        <span>Interview John H.</span>
-                        <small class="bg-green text-white half-radius">Recruiting</small>
-                    </div>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Summmit update to mobile storefronts</span>
-                        <small class="bg-orange text-white half-radius">Mobile</small>
-                    </div>
-                </section>
-                <section>
-                    <h2><span>&#9660;</span> Upcoming</h2>
-                    <div>
-                        <span class="text-red box-cross full-radius">&cross;</span>
-                        <span>Schedule meeting with Alex</span>
-                    </div>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Homepage refresh</span>
-                        <small class="bg-pink text-white half-radius">Website</small>
-                    </div>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Onboard new Sales team members</span>
-                        <small class="bg-green-light text-white half-radius">Sales</small>
-                    </div>
-                    <div>
-                        <span class="text-green box-check full-radius">&check;</span>
-                        <span>Review editorial calendar</span>
-                        <small class="bg-blue text-white half-radius">Editorial</small>
-                    </div>
-                </section>
-            </div>
+        <div class="container-1">
+            <button class="bg-blue text-white little-radius pad-bt">Add Task</button>
+            <button class="little-radius pad-bt">Add Section</button>
+        </div><br>
+        <div class="container-2">
+            <section>
+                <h2><span class="smaller">&#9660;</span> New Task</h2>
+                <div class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Quarterly Newsletter</span>
+                    <small class="bg-blue text-white half-radius pad">Editorial</small>
+                </div>
+            </section>
+            <section>
+                <h2><span class="smaller">&#9660;</span> Today</h2>
+                <div  class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Recruiting blog post</span>
+                    <small class="bg-blue text-white half-radius pad">Editorial</small>
+                </div>
+                <div  class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Mobile app launch</span>
+                    <small class="bg-violet text-white half-radius pad">Q1 Goals</small>
+                </div>
+                <div  class="row">
+                    <span class="text-red box-cross full-radius">&cross;</span>
+                    <span>Interview John H.</span>
+                    <small class="bg-green text-white half-radius pad">Recruiting</small>
+                </div>
+                <div  class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Summmit update to mobile storefronts</span>
+                    <small class="bg-orange text-white half-radius pad">Mobile</small>
+                </div>
+            </section>
+            <section>
+                <h2><span class="smaller">&#9660;</span> Upcoming</h2>
+                <div  class="row">
+                    <span class="text-red box-cross full-radius">&cross;</span>
+                    <span>Schedule meeting with Alex</span>
+                </div>
+                <div  class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Homepage refresh</span>
+                    <small class="bg-pink text-white half-radius pad">Website</small>
+                </div>
+                <div  class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Onboard new Sales team members</span>
+                    <small class="bg-green-light text-white half-radius pad">Sales</small>
+                </div>
+                <div  class="row">
+                    <span class="text-green box-check full-radius">&check;</span>
+                    <span>Review editorial calendar</span>
+                    <small class="bg-blue text-white half-radius pad">Editorial</small>
+                </div>
+            </section>
         </div>
     </main>
 </body>
+
 </html>
